[gd_scene load_steps=6 format=3 uid="uid://dhkts5j7v0glo"]

[ext_resource type="Script" path="res://scenes/creatures/enemy/enemy.gd" id="1_e214w"]
[ext_resource type="SpriteFrames" uid="uid://cc4k8bpe2sb66" path="res://2d/creatures/enemy/roach.tres" id="2_kvbui"]
[ext_resource type="Script" path="res://scenes/damage_area.gd" id="3_ydq43"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6gvmd"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8q72r"]
radius = 4.0

[node name="Roach" type="CharacterBody2D" groups=["enemy"]]
z_index = 32
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_e214w")
hp_max = 4

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = ExtResource("2_kvbui")
animation = &"die"
autoplay = "default"

[node name="CollisionWithEnemies" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_6gvmd")
disabled = true

[node name="DamageArea" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ydq43")

[node name="CollisionWithPlayer" type="CollisionShape2D" parent="DamageArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_8q72r")
disabled = true

[node name="SpawnInvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_body_entered"]
[connection signal="timeout" from="SpawnInvulnerabilityTimer" to="." method="_on_spawn_invulnerability_timer_timeout"]
